--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,7 +10,7 @@ androidx-core-ktx = "1.12.0"
 androidx-espresso-core = "3.5.1"
 androidx-material = "1.11.0"
 androidx-test-junit = "1.1.5"
-compose = "1.6.1"
+compose = "1.6.2"
 compose-compiler = "1.5.7"
 compose-plugin = "1.6.0"
 detekt = "1.23.5"
@@ -19,7 +19,7 @@ gradle-ktlint-core = "1.1.0"
 gradle-ktlint-plugin = "12.0.3"
 jdk = "17"
 junit = "5.10.1"
-kotlin = "1.9.21" # Compose Multiplatform 1.6.0-alpha01 doesn't support Kotlin 1.9.22
+kotlin = "1.9.22"
 ktor = "2.3.8"
 logback = "1.5.0"
 kover = "0.7.4"
