--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-android-gradle-plugin = "8.2.1"
+android-gradle-plugin = "8.2.2"
 android-compileSdk = "34"
 android-minSdk = "24"
 android-targetSdk = "34"
@@ -10,18 +10,18 @@ androidx-core-ktx = "1.12.0"
 androidx-espresso-core = "3.5.1"
 androidx-material = "1.11.0"
 androidx-test-junit = "1.1.5"
-compose = "1.6.2"
+compose = "1.6.3"
 compose-compiler = "1.5.7"
 compose-plugin = "1.6.0"
 detekt = "1.23.5"
 dokka = "1.9.10"
-gradle-ktlint-core = "1.1.0"
-gradle-ktlint-plugin = "12.0.3"
+ktlint-core = "1.2.1"
+ktlint-gradle = "12.1.0"
 jdk = "17"
 junit = "5.10.1"
 kotlin = "1.9.22"
-ktor = "2.3.8"
-logback = "1.5.0"
+ktor = "3.0.0-wasm2"
+logback = "1.5.3"
 kover = "0.7.4"
 
 [libraries]
@@ -50,10 +50,9 @@ android-application = { id = "com.android.application", version.ref = "android-g
 android-library = { id = "com.android.library", version.ref = "android-gradle-plugin" }
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
 dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
-gradle-ktlint-plugin = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "gradle-ktlint-plugin" }
+ktlint-gradle = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint-gradle" }
 jetbrains-compose = { id = "org.jetbrains.compose", version.ref = "compose-plugin" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
-ktor = { id = "io.ktor.plugin", version.ref = "ktor" }
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 kover-core = { id = "org.jetbrains.kotlinx.kover", version.ref = "kover" }
 
